# physgrad

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  FINAL_VERIFICATION_SUCCESS.md  LICENSE  Makefile  Makefile.gpu  README.md  ROADMAP.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_STATUS.md  TECH_DEBT.md  VERIFICATION_REPORT.md  config.conf  demo_contact_mechanics.cu  install_cpu_version.sh  test_concepts_v2.cpp  test_memory_minimal.cpp  test_pytorch_autograd_simple.cpp
.github/workflows/: ci.yml
cmake/: DetectCUDAArchitecture.cmake  PhysGradConfig.cmake.in
deployment/: README.md  deploy.sh  docker-compose.yml  entrypoint.sh  healthcheck.sh  validate.sh
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  rbac.yaml  service.yaml
deployment/monitoring/: alert_rules.yml  prometheus.yml
deployment/monitoring/grafana/dashboards/: physgrad-dashboard.json
docs/: neural_surrogate_modeling.md
examples/: demo_documented_examples.py  demo_realtime_visualization.py  neural_surrogate_example.cpp
python/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
python/physgrad/: __init__.py  autodiff.py  cli.py  core.py  examples.py  jax_integration.py  multigpu.py  physics.py  torch_integration.py  utils.py  visualization.py
python/src/: autodiff.cpp  autodiff.h  jax_integration.cpp  jax_integration.h  physgrad_binding.cpp  torch_integration.cpp  variational_contact_bindings.cpp
scripts/: check_dependencies.py  run_tests.sh
shaders/: particle.frag  particle.vert
src/: adaptive_integration.h  adaptive_integration_demo.cpp  adjoint_integrators.h  adjoint_integrators_simple.cpp  adjoint_integrators_standalone.h  adjoint_kernels.cu  adjoint_kernels.h  batched_memory_demo.cpp  collision_demo.cpp  collision_detection.cpp  collision_detection.h  common_types.h  complex_scenarios.cpp  config_demo.cpp  config_system.h  console.cpp  constraints.cpp  constraints.h  constraints_demo.cpp  contact_kernels.cu  contact_mechanics.cpp  debug_dt_forces.cpp  debug_gradient_tape.cpp  differentiable_contact.cpp  differentiable_contact.h  differentiable_forces.h  differentiable_mpm.h  digital_twin.h  direct_dt_gradient_test.cpp  domain_decomposition.cu  electromagnetic_fields.cpp  electromagnetic_fields.h  electromagnetic_fields_gpu.cu  electromagnetic_types.h  fluid_dynamics.cpp  fluid_kernels.cu  force_gradients.h  fsi_coupling.h  functional_api.cpp  functional_api.h  (+81 more)
src/concepts/: advanced_physics_concepts.h  concept_demo.h  forward_declarations.h  physics_concepts.h  physics_concepts_v2.h  type_traits.h
tests/: CMakeLists.txt  Makefile  run_tests.cpp  test_collision_detection.cpp  test_constraints.cpp  test_contact_mechanics.cpp  test_cuda.cu  test_cuda_kernels.cu  test_differentiable_contact.cpp  test_fluid_dynamics.cpp  test_memory_manager.cpp  test_physics.cpp  test_physics_engine.cpp  test_rigid_body.cpp  test_symplectic_integrators.cpp  test_variational_contact.cpp
wasm/: CMakeLists.txt  README.md  build_wasm.sh  package.json.in  physgrad.d.ts  shell.html  wasm_main.cpp
